[package]
name = "rsp-mpt"
description = ""
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
rlp.workspace = true
serde.workspace = true
thiserror.workspace = true
rkyv.workspace = true
itertools = "0.13.0"

# workspace
rsp-primitives.workspace = true

# reth
reth-primitives.workspace = true
reth-trie.workspace = true

# revm
revm.workspace = true

# alloy
alloy-primitives.workspace = true
alloy-rlp.workspace = true

[dev-dependencies]
alloy-trie.workspace = true
hex-literal.workspace = true
tracing-subscriber = "0.3.18"
rand = "0.8"

rsp-mpt = { path = ".", features = ["preimage_context"] }

[features]
default = []
preimage_context = []
