[package]
name = "rsp-client-executor"
description = ""
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
sha2.workspace = true
itertools.workspace = true
bincode.workspace = true
rkyv.workspace = true
cfg-if.workspace = true
tracing.workspace = true

# workspace
rsp-primitives.workspace = true
rsp-mpt.workspace = true

# reth
reth-consensus.workspace = true
reth-ethereum-consensus.workspace = true
reth-execution-types.workspace = true
reth-primitives.workspace = true
reth-trie.workspace = true
reth-evm.workspace = true
reth-evm-ethereum.workspace = true
reth-errors.workspace = true
reth-chainspec.workspace = true
reth-revm.workspace = true

# revm
revm.workspace = true
revm-primitives.workspace = true

# alloy
alloy-primitives.workspace = true
alloy-rlp.workspace = true

# sp1
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1-wip.git", branch = "multilinear_v6", features = ["verify"] }

[dev-dependencies]
